syntax = "proto3";

package internalapi;

option go_package = ".;internalapi";

service Vote {
  rpc GetVotes(VotesFilterRequest) returns (VotesFilterResponse);
}

message VotesFilterRequest {
  string proposal_id = 1;
  optional uint64 limit = 2;
  optional uint64 offset = 3;
}

message VoteInfo {
  string proposal_id = 1;
  string ipfs = 2;
  string voter = 3;
  uint64 created = 4;
  string reason = 5;
}

message VotesFilterResponse {
  repeated VoteInfo votes = 1;
  uint64 total_count = 2;
}
